tests/error/inout_errors/nonlinear.err
Error: Invalid annotation (at $FILE:11:16)
   | 
 9 | 
10 | @guppy.declare(module)
11 | def foo(x: int @owned) -> qubit: ...
   |                 ^^^^^ Classical type `int` cannot be owned

Guppy compilation failed due to 1 previous error
